Improve error handling & add middleware
