# docs/swagger.json
@@ -554,9 +554,28 @@
                     "type": "string"
                 },
                 "type": {
-                    "type": "string"
+                    "$ref": "#/definitions/handlers.ErrorType"
                 }
             }
+        },
+        "handlers.ErrorType": {
+            "type": "string",
+            "enum": [
+                "json-decode-error",
+                "user-not-found",
+                "invalid-user-id",
+                "todo-not-found",
+                "invalid-todo-id",
+                "invalid-query"
+            ],
+            "x-enum-varnames": [
+                "JSONDecodeError",
+                "UserNotFoundError",
+                "InvalidUserIdError",
+                "TodoNotFoundError",
+                "InvalidTodoIdError",
+                "InvalidQueryError"
+            ]
         },
         "handlers.InternalErrorResponse": {
             "type": "object",
@@ -565,7 +584,8 @@
                     "type": "string"
                 },
                 "type": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "internal-server-error"
                 }
             }
         },
@@ -678,7 +698,10 @@
                     "type": "string"
                 },
                 "type": {
-                    "type": "string"
+                    "type": "string",
+                    "enum": [
+                        "validation-error"
+                    ]
                 }
             }
         }
